--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  background-color: blue;
+}
+
+.header{
+  font-size: 24px;
+  color: white
+}
+
+#sub-header{
+   font-size: 22px;
+  color: white
 }
 
 .App-logo {
